--- a/07- 对象引用、可变性和垃圾回收/本章小结.md
+++ b/07- 对象引用、可变性和垃圾回收/本章小结.md
@@ -1,46 +1,65 @@
-1. 每个Python对象都有标识,类型和值.只有对象的值不时变化.
-2. 如果两个变量指代的不可变变量具有相同的值(a == b为True),那么实际上他们指代的是副本还是同一个对象的别名基本没什么关系,因为不可变对象的值不会变.
-3. 不可变容器是个例外.例如元组: 如果不可变容器存储的项是可变对象的引用,那么可变项的值发生变化后,不可变容器的值也会随之改变.
-4. 变量保存的是引用,这点对Python编程有很多实质影响.
-    1. 简单的赋值不创建副本.
-    2. 对+=和*=所做的增量赋值来说
-        1. 如果左边的变量绑定的是不可变对象,则创建新对象;
-        2. 如果是可变对象,则就地修改.
-    3. 为现有的变量赋予新值,不修改之前绑定的变量,这叫重新绑定.现在变量绑定了其他对象,如果变量是之前那个对象的最后一个引用,则对象被当作垃圾回收.
-    4.
-    函数的形参以别名的形式传递.这意味着函数可能会修改通过实参传入的可变对象.这一行为无法避免,除非在本地创建副本,或者使用不可变对象(
-    例如: 传入元组,而不传入列表).
-    5. 使用可变类型作为函数参数的默认值有危险,因为如果就地修改了参数,默认值也就变了,这会影响后续使用默认值的调用.
-5. 垃圾回收
-    1. 引用计数是Python中一种简单而有效的垃圾回收机制，用于自动管理对象的内存分配和释放。它跟踪每个对象的引用数量，并在引用计数减少到零时回收对象。
-        1. 下面是引用计数机制的详细说明：
-           当一个对象被创建时，它的引用计数被初始化为1。
-           每当对象被引用时，其引用计数增加1。
-           当对象的引用不再存在时，其引用计数减少1。
-           引用计数可以通过sys.getrefcount(obj)函数来获取对象的当前引用计数。
-        2. 垃圾回收：
-           当对象的引用计数减少到零时，意味着该对象没有被任何引用，成为垃圾对象。
-           垃圾回收器会定期扫描内存空间，查找引用计数为零的垃圾对象。
-           一旦发现垃圾对象，垃圾回收器将释放其占用的内存空间，并将其从内存中删除。
-        3. 循环引用的处理：
-           引用计数机制可以处理简单的循环引用情况，即当两个对象相互引用时。
-           Python的引用计数机制无法解决更复杂的循环引用问题，例如对象之间形成的循环引用链。
-           为了处理这种情况，Python引入了其他的垃圾回收机制，如标记清除和分代回收。
-        4. 引用计数机制的优点是简单高效，可以立即回收不再被引用的对象，并且不需要停止程序的执行。然而，引用计数机制并不能解决所有的内存管理问题，特别是循环引用的情况，因此需要其他的垃圾回收算法来处理这些情况。
-        5. 总结来说，引用计数是Python中一种简单而高效的垃圾回收机制，通过跟踪对象的引用数量来管理内存分配和释放。它可以处理简单的引用关系并立即回收不再被引用的对象，但无法处理复杂的循环引用情况，需要其他垃圾回收机制的辅助。
-    2. 标记清除（Mark and Sweep）是一种常用的垃圾回收算法，用于处理动态内存管理中的循环引用和不可达对象。它通过标记和回收两个阶段来执行垃圾回收操作。
-        1. 标记阶段：从根节点开始遍历所有的引用对象，将所有被引用的对象标记为活动对象。
-        2. 清除阶段：遍历整个堆内存，将未标记的对象清除。
-        3. 标记清除算法的优点是可以处理循环引用和不可达对象，但缺点是执行效率不高，因为需要遍历所有的引用对象和堆内存。
-        4. 总结起来，标记清除通过标记可达对象并清除不可达对象来回收内存空间。它是Python垃圾回收机制中的重要组成部分，用于自动管理动态内存分配和释放。
-    3. 分代回收（Generational
-       Collection）是一种常用的垃圾回收策略，用于根据对象的存活时间和代别来决定垃圾回收的频率和方式。Python中的分代回收主要基于两个观察结果：大部分对象在内存中存在的时间很短，而只有少部分对象长时间存在。
-        1. 0代：存活时间短，垃圾回收频繁。
-        2. 1代：存活时间长，垃圾回收频率低。
-        3. 2代：存活时间更长，垃圾回收频率更低。
-        4. 分代回收算法的优点是可以根据对象的存活时间采取不同的垃圾回收策略，提高垃圾回收的效率。但缺点是需要维护多个代的信息，增加了垃圾回收器的复杂度。
-        5. 总结起来，分代回收通过将所有对象分为不同的代，然后根据代的特点采取不同的垃圾回收策略。它是Python垃圾回收机制中的重要组成部分，用于自动管理动态内存分配和释放。
-6. Python引用计数
+### 变量保存的是引用
+这点对Python编程有很多实质影响.
+1. 简单的赋值不创建副本.
+2. 对+=和*=所做的增量赋值来说
+    1. 如果左边的变量绑定的是不可变对象,则创建新对象;
+    2. 如果是可变对象,则就地修改.
+3. 为现有的变量赋予新值,不修改之前绑定的变量,这叫重新绑定.现在变量绑定了其他对象,如果变量是之前那个对象的最后一个引用,则对象被当作垃圾回收.
+4. 函数的形参以别名的形式传递.这意味着函数可能会修改通过实参传入的可变对象.这一行为无法避免,除非在本地创建副本,或者使用不可变对象(
+例如: 传入元组,而不传入列表).
+5. 使用可变类型作为函数参数的默认值有危险,因为如果就地修改了参数,默认值也就变了,这会影响后续使用默认值的调用.
+6. 不可变容器是个例外.例如元组: 如果不可变容器存储的项是可变对象的引用,那么可变项的值发生变化后,不可变容器的值也会随之改变.
+
+### 深拷贝和浅拷贝
+copy模块提供的copy和deepcopy函数能为任意对象做深拷贝和浅拷贝。
+
+#### 浅拷贝
+构造函数或[:]做的是浅拷贝，即复制最外层容器，副本中的项是源容器中项的引用。如果所有项都是不可变的，那么这种行为没有问题，而且还能节省内存。
+
+#### 深拷贝
+深拷贝，副本不共享内部对象的引用。
+
+### 共享传参
+共享传参指函数的形参获得实参引用的副本。也就是说，函数内部的形参是实参的别名（指向同一内存地址的不同名称或引用）。
+
+#### 1. 共享传参（Pass-by-Sharing）
+Python 中的参数传递方式通常被称为共享传参或者传递对象引用。这意味着当你将一个对象作为参数传递给函数时，传递的是对象引用的副本，而不是对象本身或其内容的副本。
+
+#### 2. 形参作为实参的别名
+在函数内部，形式参数（形参）实际上是实际参数（实参）的别名。它们引用的是同一个对象（如果实参是一个对象的话），但是这个引用本身是独立的。
+换句话说，形参和实参指向同一对象，但它们是不同的引用。
+
+#### 3. 影响可变与不可变类型
+1. 如果传递的对象是可变的（如列表或字典），函数内部对这个对象的修改会影响到外部实参引用的对象。
+2. 如果对象是不可变的（如整数、字符串、元组），则由于不能修改不可变对象，函数内部的任何尝试修改都会导致创建新的对象，而外部实参引用的对象不会被改变。
+
+### 垃圾回收：
+
+#### 引用计数
+是Python中一种简单而有效的垃圾回收机制，用于自动管理对象的内存分配和释放。它跟踪每个对象的引用数量，并在引用计数减少到零时回收对象。 
+
+1. 引用计数的优点是简单高效，缺点是无法处理循环引用和不可达对象。
+2. 引用计数机制并不能解决所有的内存管理问题，Python引入了其他的垃圾回收机制，如标记清除和分代回收。如标记清除和分代回收。
+
+#### 标记清除（Mark and Sweep）
+是一种常用的垃圾回收算法，用于处理动态内存管理中的循环引用和不可达对象。它通过标记和回收两个阶段来执行垃圾回收操作。
+
+1. 标记阶段：从根节点开始遍历所有的引用对象，将所有被引用的对象标记为活动对象。
+2. 清除阶段：遍历整个堆内存，将未标记的对象清除。
+3. 标记清除算法的优点是可以处理循环引用和不可达对象，但缺点是执行效率不高，因为需要遍历所有的引用对象和堆内存。
+4. 总结起来，标记清除通过标记可达对象并清除不可达对象来回收内存空间。它是Python垃圾回收机制中的重要组成部分，用于自动管理动态内存分配和释放。
+
+#### 分代回收（Generational Collection）
+是一种常用的垃圾回收策略，用于根据对象的存活时间和代别来决定垃圾回收的频率和方式。Python中的分代回收主要基于两个观察结果：大部分对象在内存中存在的时间很短，而只有少部分对象长时间存在。
+
+1. 0代：存活时间短，垃圾回收频繁。
+2. 1代：存活时间长，垃圾回收频率低。
+3. 2代：存活时间更长，垃圾回收频率更低。
+4. 分代回收算法的优点是可以根据对象的存活时间采取不同的垃圾回收策略，提高垃圾回收的效率。但缺点是需要维护多个代的信息，增加了垃圾回收器的复杂度。
+5. 总结起来，分代回收通过将所有对象分为不同的代，然后根据代的特点采取不同的垃圾回收策略。它是Python垃圾回收机制中的重要组成部分，用于自动管理动态内存分配和释放。
+
+### Python引用计数
+
     1. 增加引用计数的条件
         1. 创建对象，例如，a = 3
         2. 将对象加入列表中，例如，my_list.append(a)
