--- a/04- 深入类和对象/本章小结.md
+++ b/04- 深入类和对象/本章小结.md
@@ -1,3 +1,38 @@
-1. [Python面向对象](https://www.runoob.com/python/python-object.html)
-2. [Python类](https://docs.python.org/zh-cn/3/tutorial/classes.html)
-3. [Python继承](https://www.w3school.com.cn/python/python_inheritance.asp)
+### 1. super()
+    super()是一个内置的函数，用于在类中调用父类(超类)的方法。
+### 2. 私有属性和受保护属性
+#### 私有属性名称改写
+    如果以__mood的形式命名实例属性，那么Python就会把属性名存入实例属性__dict__中，而且会在前面加上一个下划线和类名。
+    因此，对于Dog类来说，__mood会变成_Dog__mood；对于Beagle类来说，__mood会变成_Beagle_mood。
+#### 受保护属性
+    Python文档的某些角落把使用一个下划线前缀标记的属性称为"受保护"的属性。
+    Python解释器不会对使用单下划线的属性名做特殊处理。
+    使用self._x这种形式的"保护"属性的做法很常见，但很少有人把这种属性叫做"受保护"的属性，有些人甚至将其称为"私有"属性。
+#### 区别
+    1. 私有属性或方法不能被子类或者其他类直接访问。
+    2. 受保护属性或方法可以被子类访问，但是按照惯例，其他类或者代码不应该尝试访问它。
+### 3. @classmethod和@staticmethod装饰器
+#### @classmethod
+    1. 类装饰器定义操作类而不是操作实例的方法。
+    2. 类装饰器改变了调用方法的方式，因此接收的第一个参数是类本身，而不是实例。
+    3. 类装饰器最常见的用途是定义备选构造函数。
+#### @staticmethod
+    1. 静态方法就是普通函数，只是碰巧位于类的定义体中，而不是在模块层定义。
+#### 区别：
+    1. 类方法接收一个隐含的类参数cls，只能访问类变量或方法，不能访问实例变量或方法。
+    2. 静态方法不接受特殊的第一个参数，无法访问类或实例的属性或方法，它主要用来做一些独立于类和实例的工作。
+### 4.类变量和实例变量
+#### 类变量
+    1. 定义与类本身：类变量是在类定义中声明的。
+    2. 共享值：类变量的一个重要特点是它们由类的所有实例共享。这意味着如果一个实例改变了类变量的值，这个改变将反映在其他所有实例上。
+    3. 访问方式：类变量可以通过类名或类的实例访问。通常使用类名访问类变量更为明智，以强调其共享性质。
+    4. 用途：类变量通常用于存储与整个类相关的属性，例如所有实例共享的常量或计数器。    
+#### 实例变量
+    1. 定义与实例：实例变量是在类的方法中定义的，通常是在__init__方法中。每当创建类的新实例时，实例变量都会被重新初始化。
+    2. 独立值：实例变量的值对每个实例都是独立的。一个实例对其实例变量的更改不会影响其他实例。
+    3. 访问方式：实例变量只能通过类的实例访问。
+    4. 用途：实例变量用于存储每个实例特有的信息，例如一个对象的状态或属性。
+    
+[Python面向对象](https://www.runoob.com/python/python-object.html)
+[Python类](https://docs.python.org/zh-cn/3/tutorial/classes.html)
+[Python继承](https://www.w3school.com.cn/python/python_inheritance.asp)
